--- a/test/css/grid.css
+++ b/test/css/grid.css
@@ -129,6 +129,6 @@
   float: left;
   margin-right: 1.69492%;
   display: inline;
-  margin-left: 5em;
-  margin-right: 5em;
+  margin-left: 8.47458%;
+  margin-right: 8.47458%;
 }
